# icub-sdfast

./: CMakeLists.txt  README.md  README.md~  main.cpp
codes/include/: Basics.hpp  Model.hpp  Model.hpp~
codes/src/: Basics.cpp  Model.cpp  Model.cpp~
pre-computation/: iCube_Tree.ods
pre-computation/Matlab Code/: Inb2Joint_center.m  Inb2joint_left.m  Inb2joint_left.m~  body2joint_center.m  body2joint_left.m  body2joint_right.m  inb2joint_right.m
sdfast/: sdfast_model.sd~
sdfast/include/: Description.hpp
sdfast/src/: motions.c  sdfast_model.sd  sdfast_model.sd~  sdfast_model_d.c  sdfast_model_d.c~  sdfast_model_i  sdfast_model_i~  sdfast_model_lib.c  sdfast_model_s.c
